--- a/package.json
+++ b/package.json
@@ -1,23 +1,114 @@
 {
-    "name": "00-0-html",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.html",
-    "scripts": {
-      "start": "serve"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/Mercury3141/CAS-FEE-Project-1"
-    },
-    "keywords": [],
-    "author": "Silvan Simon Weber",
-    "license": "OST – Ostschweizer Fachhochschule",
-    "bugs": {
-      "url": "https://github.com/Mercury3141/CAS-FEE-Project-1/issues"
-    },
-    "homepage": "https://github.com/Mercury3141/CAS-FEE-Project-1/blob/main/README.md",
-    "devDependencies": {
-      "serve": "^11.2.0"
-    }
+  "name": "00-0-html",
+  "version": "1.0.0",
+  "description": "Reminder App",
+  "main": "index.html",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "stylelint": "stylelint \"**/*.css\"",
+    "eslint": "eslint \"**/*.js\"",
+    "all": "npm run stylelint && npm run eslint && node -e \"console.log('npm run all completed')\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mercury3141/CAS-FEE-Project-1.git"
+  },
+  "keywords": [],
+  "author": "Silvan Simon Weber",
+  "license": "OST – Ostschweizer Fachhochschule",
+  "bugs": {
+    "url": "https://github.com/Mercury3141/CAS-FEE-Project-1/issues"
+  },
+  "homepage": "https://github.com/Mercury3141/CAS-FEE-Project-1/blob/main/README.md",
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.3.2",
+    "serve": "^14.2.3",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.0"
+  },
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "ajv": "^6.5.3",
+    "ansi-align": "^2.0.0",
+    "ansi-regex": "^3.0.1",
+    "ansi-styles": "^3.2.1",
+    "arch": "^2.2.0",
+    "arg": "^2.0.0",
+    "balanced-match": "^1.0.2",
+    "body-parser": "^1.20.2",
+    "boxen": "^1.3.0",
+    "brace-expansion": "^1.1.11",
+    "bytes": "^3.0.0",
+    "camelcase": "^4.1.0",
+    "chalk": "^2.4.1",
+    "cli-boxes": "^1.0.0",
+    "clipboardy": "^1.2.3",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "compressible": "^2.0.18",
+    "compression": "^1.7.3",
+    "concat-map": "^0.0.1",
+    "content-disposition": "^0.5.2",
+    "cross-spawn": "^5.1.0",
+    "debug": "^2.6.9",
+    "deep-extend": "^0.6.0",
+    "escape-string-regexp": "^1.0.5",
+    "execa": "^0.8.0",
+    "express": "^4.19.2",
+    "fast-deep-equal": "^2.0.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-url-parser": "^1.1.3",
+    "get-stream": "^3.0.0",
+    "handlebars": "^4.7.8",
+    "has-flag": "^3.0.0",
+    "idb": "^8.0.0",
+    "ini": "^1.3.8",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-stream": "^1.1.0",
+    "isexe": "^2.0.0",
+    "json-schema-traverse": "^0.4.1",
+    "lru-cache": "^4.1.5",
+    "luxon": "^3.4.4",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.8",
+    "ms": "^2.0.0",
+    "nedb-promises": "^6.2.3",
+    "negotiator": "^0.6.3",
+    "npm-run-path": "^2.0.2",
+    "on-headers": "^1.0.2",
+    "p-finally": "^1.0.0",
+    "path-is-inside": "^1.0.2",
+    "path-key": "^2.0.1",
+    "path-to-regexp": "^2.2.1",
+    "pseudomap": "^1.0.2",
+    "punycode": "^1.4.1",
+    "range-parser": "^1.2.0",
+    "rc": "^1.2.8",
+    "registry-auth-token": "^3.3.2",
+    "registry-url": "^3.1.0",
+    "safe-buffer": "^5.1.2",
+    "serve-handler": "^6.1.3",
+    "shebang-command": "^1.2.0",
+    "shebang-regex": "^1.0.0",
+    "signal-exit": "^3.0.7",
+    "string-width": "^2.1.1",
+    "strip-ansi": "^4.0.0",
+    "strip-eof": "^1.0.0",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^5.5.0",
+    "term-size": "^1.2.0",
+    "update-check": "^1.5.2",
+    "uri-js": "^4.4.1",
+    "vary": "^1.1.2",
+    "which": "^1.3.1",
+    "widest-line": "^2.0.1",
+    "yallist": "^2.1.2"
   }
+}
