--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "shebang-command": "^1.2.0",
     "shebang-regex": "^1.0.0",
     "signal-exit": "^3.0.7",
+    "sortablejs": "^1.15.2",
     "string-width": "^2.1.1",
     "strip-ansi": "^4.0.0",
     "strip-eof": "^1.0.0",
