--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "content-disposition": "^0.5.2",
     "cors": "^2.8.5",
     "cross-spawn": "^5.1.0",
+    "date-fns": "^3.6.0",
     "debug": "^2.6.9",
     "deep-extend": "^0.6.0",
     "escape-string-regexp": "^1.0.5",
