--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "registry-url": "^3.1.0",
     "safe-buffer": "^5.1.2",
     "serve-handler": "^6.1.3",
+    "set-function-length": "^1.2.2",
     "shebang-command": "^1.2.0",
     "shebang-regex": "^1.0.0",
     "signal-exit": "^3.0.7",
